syntax = "proto3";

package golex.virtualtracking;

// Capture → YOLO (only one message)
//
// ⚠️ Backward-compat:
// We keep the old string fields (schema, pixel_format) and ADD enum fields.
// This way old senders keep working, and new senders can switch to enums.

enum SchemaId {
  SCHEMA_UNSPECIFIED       = 0;
  SCHEMA_GOLEX_VT_INPUT_V1 = 1;  // "golex.vt.input_v1"
}

enum PixelFormat {
  PIXEL_FORMAT_UNSPECIFIED = 0;
  PIXEL_FORMAT_BGR24       = 1;  // "BGR24"
}

message InputFrame {
  // Old (string) fields — kept for wire compatibility
  string schema       = 1 [deprecated = true];
  int64  frame_id     = 2;
  double timestamp    = 3;
  uint32 width        = 4;
  uint32 height       = 5;
  string pixel_format = 6 [deprecated = true];
  bytes  frame_data   = 7;

  // New (enum) fields — preferred
  SchemaId    schema_id       = 8;
  PixelFormat pixel_format_id = 9;
}

